[gd_scene load_steps=32 format=2]

[ext_resource path="res://Main Resources/Sprites/Interfaz/Pausa/45 sin título_20220630220033.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Interfaces/Menu/Interfaz.gd" type="Script" id=2]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (3).png" type="Texture" id=3]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (7).png" type="Texture" id=4]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (1).png" type="Texture" id=5]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/45 sin título_20220630221601.png" type="Texture" id=6]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (6).png" type="Texture" id=7]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (5).png" type="Texture" id=8]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (4).png" type="Texture" id=9]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/TG (2).png" type="Texture" id=10]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/26 sin título_20220610201118.png" type="Texture" id=11]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/26 sin título_20220610202646.png" type="Texture" id=12]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/26 sin título_20220612125443.png" type="Texture" id=13]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/61 sin título.png" type="Texture" id=14]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/45 sin título_20220717130257.png" type="Texture" id=16]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/26 sin título_20220717130818.png" type="Texture" id=17]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/182 sin título_20211021094348.png" type="Texture" id=18]
[ext_resource path="res://Main Resources/Sprites/Interfaz/StartScreen/85 sin título_20220218151603.png" type="Texture" id=19]
[ext_resource path="res://Main Resources/Shaders/cielos/Interfaz.tres" type="Material" id=22]

[sub_resource type="Animation" id=103]
resource_name = "color"
length = 18.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12, 15, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.113725, 0.454902, 1 ), Color( 0.431373, 0, 0.454902, 1 ), Color( 0.454902, 0, 0, 1 ), Color( 0.454902, 0.447059, 0, 1 ), Color( 0.0235294, 0.454902, 0, 1 ), Color( 0, 0.454902, 0.443137, 1 ), Color( 0, 0.113725, 0.454902, 1 ) ]
}

[sub_resource type="SpriteFrames" id=117]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "move-on",
"speed": 20.0
} ]

[sub_resource type="Animation" id=121]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.0457527 ),
"update": 0,
"values": [ Vector2( 504, 16 ), Vector2( 490, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.0457527 ),
"update": 0,
"values": [ Vector2( 149, 149 ), Vector2( 177, 177 ) ]
}

[sub_resource type="Animation" id=106]
resource_name = "focus"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.183011, 0.307786 ),
"update": 0,
"values": [ Vector2( 264, 3 ), Vector2( 246, -14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.183011, 0.307786 ),
"update": 0,
"values": [ Vector2( 173, 173 ), Vector2( 208, 208 ) ]
}

[sub_resource type="Animation" id=107]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.0457527 ),
"update": 0,
"values": [ Vector2( 40, 16 ), Vector2( 24, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.34151, 0.0457527 ),
"update": 0,
"values": [ Vector2( 149, 149 ), Vector2( 177, 177 ) ]
}

[sub_resource type="Animation" id=114]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.203063, 0.052556 ),
"update": 0,
"values": [ Vector2( 248, 30 ), Vector2( 248, 0 ) ]
}

[sub_resource type="Animation" id=115]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.138696 ),
"update": 0,
"values": [ Vector2( 183, 30 ), Vector2( 183, 0 ) ]
}

[sub_resource type="Animation" id=116]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.138696 ),
"update": 0,
"values": [ Vector2( 119, 30 ), Vector2( 119, 0 ) ]
}

[sub_resource type="Animation" id=122]
resource_name = "focus"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.366021, 0.138696 ),
"update": 0,
"values": [ Vector2( 55, 30 ), Vector2( 55, 0 ) ]
}

[sub_resource type="DynamicFont" id=120]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=119]
resource_name = "focus"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.299 ),
"transitions": PoolRealArray( 0.241484, 0.25 ),
"update": 0,
"values": [ Vector2( 70, 70 ), Vector2( 85, 85 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.299 ),
"transitions": PoolRealArray( 0.241484, 0.25 ),
"update": 0,
"values": [ Vector2( 32, 392 ), Vector2( 24, 384 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("name:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.241484, 0.25 ),
"update": 0,
"values": [ Vector2( -24, 72 ), Vector2( -16, 80 ) ]
}

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="fondo" type="TextureRect" parent="."]
modulate = Color( 0, 0.113725, 0.454902, 1 )
material = ExtResource( 22 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="animation" type="AnimationPlayer" parent="fondo"]
autoplay = "color"
anims/color = SubResource( 103 )

[node name="Titulo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 8.0
margin_right = 241.0
margin_bottom = 184.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 1

[node name="Tittle2" type="AnimatedSprite" parent="Titulo"]
position = Vector2( 241.481, 158 )
scale = Vector2( 1.34615, 1.34615 )
frames = SubResource( 117 )
animation = "move-on"
frame = 6
playing = true

[node name="Botones" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.5
margin_top = -65.5
margin_right = 350.5
margin_bottom = 113.5
__meta__ = {
"_edit_group_": true
}

[node name="mas" type="TextureButton" parent="Botones"]
anchor_left = 0.0570613
anchor_top = 0.0893855
anchor_right = 0.269615
anchor_bottom = 0.921788
margin_left = 464.0
margin_right = 464.0
margin_bottom = -4.57764e-05
focus_neighbour_left = NodePath("../ModoHistoria")
focus_neighbour_bottom = NodePath("../../botones_chiquitos/Opciones")
texture_normal = ExtResource( 16 )
expand = true

[node name="animfoc" type="AnimationPlayer" parent="Botones/mas"]
anims/focus = SubResource( 121 )

[node name="ModoHistoria" type="TextureButton" parent="Botones"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5
margin_top = -86.5
margin_right = 86.5
margin_bottom = 86.5
focus_neighbour_bottom = NodePath("../../botones_chiquitos/Opciones")
texture_normal = ExtResource( 1 )
expand = true

[node name="animfoc" type="AnimationPlayer" parent="Botones/ModoHistoria"]
anims/focus = SubResource( 106 )

[node name="Personajes" type="TextureButton" parent="Botones"]
anchor_left = 0.0570613
anchor_top = 0.0893855
anchor_right = 0.269615
anchor_bottom = 0.921788
focus_neighbour_left = NodePath("../../profile_button")
focus_neighbour_bottom = NodePath("../../botones_chiquitos/Opciones")
texture_normal = ExtResource( 6 )
expand = true

[node name="animfoc" type="AnimationPlayer" parent="Botones/Personajes"]
anims/focus = SubResource( 107 )

[node name="botones_chiquitos" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -171.0
margin_top = -99.0
margin_right = 172.0
margin_bottom = -16.0
focus_mode = 2
__meta__ = {
"_edit_group_": true
}

[node name="Opciones" type="TextureButton" parent="botones_chiquitos"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -53.0
margin_right = -42.0
focus_neighbour_top = NodePath("../../Botones/ModoHistoria")
texture_normal = ExtResource( 11 )

[node name="focusanim" type="AnimationPlayer" parent="botones_chiquitos/Opciones"]
anims/focus = SubResource( 114 )

[node name="Logros" type="TextureButton" parent="botones_chiquitos"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 30.0
margin_right = -107.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../../Botones/ModoHistoria")
texture_normal = ExtResource( 12 )

[node name="focusanim" type="AnimationPlayer" parent="botones_chiquitos/Logros"]
anims/focus = SubResource( 115 )

[node name="Stats" type="TextureButton" parent="botones_chiquitos"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 30.0
margin_right = -171.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../../Botones/ModoHistoria")
texture_normal = ExtResource( 13 )

[node name="focusanim" type="AnimationPlayer" parent="botones_chiquitos/Stats"]
anims/focus = SubResource( 116 )

[node name="Musics" type="TextureButton" parent="botones_chiquitos"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -288.0
margin_top = 30.0
margin_right = -235.0
margin_bottom = 83.0
focus_neighbour_top = NodePath("../../Botones/ModoHistoria")
texture_normal = ExtResource( 17 )

[node name="focusanim" type="AnimationPlayer" parent="botones_chiquitos/Musics"]
anims/focus = SubResource( 122 )

[node name="profile_button" type="TextureButton" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 92.0
margin_right = 102.0
margin_bottom = 162.0
focus_neighbour_right = NodePath("../Botones/Personajes")
texture_normal = ExtResource( 14 )
expand = true

[node name="name" type="Label" parent="profile_button"]
margin_left = -24.0
margin_top = 72.0
margin_right = 94.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
custom_fonts/font = SubResource( 120 )
text = "DaniGamer"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="profile_button"]
anims/focus = SubResource( 119 )

[connection signal="focus_entered" from="Botones/mas" to="." method="_on_mas_focus_entered"]
[connection signal="focus_exited" from="Botones/mas" to="." method="_on_mas_focus_exited"]
[connection signal="pressed" from="Botones/mas" to="." method="_on_mas_pressed"]
[connection signal="focus_entered" from="Botones/ModoHistoria" to="." method="_on_ModoHistoria_focus_entered"]
[connection signal="focus_exited" from="Botones/ModoHistoria" to="." method="_on_ModoHistoria_focus_exited"]
[connection signal="pressed" from="Botones/ModoHistoria" to="." method="_on_ModoHistoria_pressed"]
[connection signal="focus_entered" from="Botones/Personajes" to="." method="_on_Personajes_focus_entered"]
[connection signal="focus_exited" from="Botones/Personajes" to="." method="_on_Personajes_focus_exited"]
[connection signal="pressed" from="Botones/Personajes" to="." method="_on_Personajes_pressed"]
[connection signal="focus_entered" from="botones_chiquitos/Opciones" to="." method="_on_Opciones_focus_entered"]
[connection signal="focus_exited" from="botones_chiquitos/Opciones" to="." method="_on_Opciones_focus_exited"]
[connection signal="pressed" from="botones_chiquitos/Opciones" to="." method="_on_Opciones_pressed"]
[connection signal="focus_entered" from="botones_chiquitos/Logros" to="." method="_on_Logros_focus_entered"]
[connection signal="focus_exited" from="botones_chiquitos/Logros" to="." method="_on_Logros_focus_exited"]
[connection signal="pressed" from="botones_chiquitos/Logros" to="." method="_on_Logros_pressed"]
[connection signal="focus_entered" from="botones_chiquitos/Stats" to="." method="_on_Stats_focus_entered"]
[connection signal="focus_exited" from="botones_chiquitos/Stats" to="." method="_on_Stats_focus_exited"]
[connection signal="pressed" from="botones_chiquitos/Stats" to="." method="_on_Stats_pressed"]
[connection signal="focus_entered" from="botones_chiquitos/Musics" to="." method="_on_Musics_focus_entered"]
[connection signal="focus_exited" from="botones_chiquitos/Musics" to="." method="_on_Musics_focus_exited"]
[connection signal="focus_entered" from="profile_button" to="." method="_on_profile_button_focus_entered"]
[connection signal="focus_exited" from="profile_button" to="." method="_on_profile_button_focus_exited"]
[connection signal="pressed" from="profile_button" to="." method="_on_profile_button_pressed"]
